[gd_scene load_steps=3 format=3 uid="uid://lrdgen2utvw0"]

[ext_resource type="Script" path="res://adding.gd" id="1_b2svu"]
[ext_resource type="Texture2D" uid="uid://clfqg7sfaqqbf" path="res://images/girl.png" id="2_kkkqa"]

[node name="Adding" type="Node2D"]
script = ExtResource("1_b2svu")

[node name="Title" type="Label" parent="."]
offset_left = 323.0
offset_top = 22.0
offset_right = 873.0
offset_bottom = 124.0
theme_override_font_sizes/font_size = 30
text = "Find the sum by adding the following: "
horizontal_alignment = 1

[node name="Question" type="Label" parent="."]
offset_left = 333.0
offset_top = 178.0
offset_right = 883.0
offset_bottom = 280.0
theme_override_font_sizes/font_size = 50
text = "1+1"
horizontal_alignment = 1

[node name="AnswerInput" type="LineEdit" parent="."]
offset_left = 414.0
offset_top = 340.0
offset_right = 763.0
offset_bottom = 379.0
placeholder_text = "Enter your number here"

[node name="ResultLabel" type="Label" parent="."]
offset_left = 427.0
offset_top = 510.0
offset_right = 744.0
offset_bottom = 581.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "test"
horizontal_alignment = 1

[node name="SubmitButton" type="Button" parent="."]
offset_left = 371.0
offset_top = 412.0
offset_right = 836.0
offset_bottom = 478.0
text = "Submit"

[node name="ChallengerSprite" type="Sprite2D" parent="."]
position = Vector2(154, 327)
scale = Vector2(0.0643857, 0.064375)
texture = ExtResource("2_kkkqa")

[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
